<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="-16dp">

    <EditText
        android:id="@+id/word_guess"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:hint="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/word_guess" />

    <TextView
        android:id="@+id/check1"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/guess_1"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/check2"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:text="@string/guess_2"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1check" />

    <TextView
        android:id="@+id/word1"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/word2"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result1" />

    <TextView
        android:id="@+id/word3"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result2" />

    <TextView
        android:id="@+id/result1"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word1" />

    <TextView
        android:id="@+id/result2"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word2" />

    <TextView
        android:id="@+id/result3"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word3" />

    <TextView
        android:id="@+id/guess3"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:text="@string/guess_3"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess2check" />

    <TextView
        android:id="@+id/guess1check"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:text="@string/guess_1_check"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check1" />

    <TextView
        android:id="@+id/guess2check"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:text="@string/guess_2_check"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check2" />

    <TextView
        android:id="@+id/guess3check"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:text="@string/guess_3_check"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess3" />

    <TextView
        android:id="@+id/correctWord"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/word"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/word_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess3check" />

</androidx.constraintlayout.widget.ConstraintLayout>